--- a/src/content/pages/insurance.html
+++ b/src/content/pages/insurance.html
@@ -41,9 +41,9 @@ eleventyNavigation:
         </div>
 
         <picture class="cs-picture cs-picture2">
-                    <source media="(max-width: 600px)" srcset="https://murrieta-therapy.b-cdn.net/John-Bacon-Gilbert.png">
-                    <source media="(min-width: 601px)" srcset="https://murrieta-therapy.b-cdn.net/John-Bacon-Gilbert.png">
-                    <img aria-hidden="true" decoding="async" src="https://murrieta-therapy.b-cdn.net/John-Bacon-Gilbert.png" alt="John Bacon Gilbert, the founder of Lakes Therapy and Counseling Center" loading="lazy" width="400" height="563">
+                    <source media="(max-width: 600px)" srcset="https://www.carecredit.com/sites/pc/image/flexible-financing-prequal-apply-pay-375x320.png">
+                    <source media="(min-width: 601px)" srcset="https://www.carecredit.com/sites/pc/image/flexible-financing-prequal-apply-pay-375x320.png">
+                    <img aria-hidden="true" decoding="async" src="https://www.carecredit.com/sites/pc/image/flexible-financing-prequal-apply-pay-375x320.png" alt="John Bacon Gilbert, the founder of Lakes Therapy and Counseling Center" loading="lazy" width="400" height="563">
                 </picture>
     
         
